--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <h2 class="pageTitle">slateIt!</h2>
-        <img src="/src/images/logo.png" alt="the I haven't seen that movie slate-a-base Logo"  class="logo">
+        <img src="/src/images/logo.png" alt="the I haven't seen that movie slate-a-base Logo"  id="logo">
         <h1 id="mainTitle">The "I Haven't See That Movie" Slate-a-Base</h1>
     </header>
     <main>
-        <form action=" " method="GET" class="searchBar" >
+        <form action=" " method="GET" id="searchBar" >
             <section>
                 <input type="text" name="searchBar" placeholder="search movies or slaters">
                 <select name="searchType" id="searchType">
